last changes in bib

--- a/ausarbeitung/bibliography.bib
+++ b/ausarbeitung/bibliography.bib
@@ -37,7 +37,7 @@ Protocol},
 }
 
 @Article{veitinger2002,
-  Title                    = {"Overpeer": Angriff auf Musikfans},
+  Title                    = {"'Overpeer"': Angriff auf Musikfans},
   Author                   = {Thomas Veitinger},
   Journal                  = {Spiegel Online},
   Year                     = {2002}
